# course-work_Upit

./: .gitignore  README.md  main.py  pyproject.toml
src/: utils.py
tests/: test_utils.py
